@@ -18,43 +18,24 @@
 package io.sapl.test.coverage.api;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardOpenOption;
 import java.util.List;
 
 import org.assertj.core.api.Assertions;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.io.TempDir;
 
 import io.sapl.test.coverage.api.model.PolicySetHit;
 
 class CoverageCustomConfigTests {
 
-    private Path basedir;
-
-    private CoverageHitReader reader;
-
-    private CoverageHitRecorder recorder;
-
-    @BeforeEach
-    void setup() {
-        basedir       = Paths.get("temp").resolve("sapl-coverage");
-        this.reader   = new CoverageHitAPIFile(basedir);
-        this.recorder = new CoverageHitAPIFile(basedir);
-    }
-
-    @AfterEach
-    void cleanup() {
-        TestFileHelper.deleteDirectory(basedir.toFile());
-    }
-
     @Test
-    void testSystemPropertyConfig_Reader() throws IOException {
-        Path path = this.basedir.resolve("hits").resolve("_policySetHits.txt");
+    void testSystemPropertyConfig_Reader(@TempDir Path tempDir) throws IOException {
+        var               coveragePath = tempDir.resolve("sapl-coverage");
+        CoverageHitReader reader       = new CoverageHitAPIFile(coveragePath);
+        Path              path         = coveragePath.resolve("hits").resolve("_policySetHits.txt");
         if (!Files.exists(path)) {
             var parent = path.getParent();
             if (parent != null) {
@@ -62,8 +43,7 @@ class CoverageCustomConfigTests {
             }
             Files.createFile(path);
         }
-        Files.write(path, (new PolicySetHit("set1") + System.lineSeparator()).getBytes(StandardCharsets.UTF_8),
-                StandardOpenOption.APPEND);
+        Files.writeString(path, new PolicySetHit("set1") + System.lineSeparator(), StandardOpenOption.APPEND);
 
         // act
         List<PolicySetHit> resultPolicySetHits = reader.readPolicySetHits();
@@ -74,12 +54,14 @@ class CoverageCustomConfigTests {
     }
 
     @Test
-    void testSystemPropertyConfig_Recorder() {
+    void testSystemPropertyConfig_Recorder(@TempDir Path tempDir) {
+        var                 coveragePath = tempDir.resolve("sapl-coverage");
+        CoverageHitRecorder recorder     = new CoverageHitAPIFile(coveragePath);
         // act
         recorder.createCoverageHitFiles();
 
         // assert
-        Path path = this.basedir.resolve("hits").resolve("_policySetHits.txt");
+        Path path = coveragePath.resolve("hits").resolve("_policySetHits.txt");
         Assertions.assertThat(Files.exists(path)).isTrue();
 
     }
